# PersonaVoiceBot

./: .gitignore  AUTH.md  DEPLOYMENT.md  README.md
backend/: .env.example  Dockerfile  auth.py  bot.py  pyproject.toml  render.yaml  requirements.txt  server.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: ForgotPasswordPage.tsx  LoginPage.tsx  ProtectedRoute.tsx  ResetPasswordPage.tsx  SignupPage.tsx
frontend/src/components/magicui/: marquee.tsx  rainbow-button.tsx  ripple.tsx  shimmer-button.tsx
frontend/src/components/ui/: animated-greeting.tsx  user-menu.tsx
frontend/src/lib/: supabase.ts
frontend/src/store/: authStore.ts
